--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
   <title>Product preview card component</title>
 </head>
 <body>
-  <h1>Product preview card component</h1>
+  <header>
+    <h1>Product preview card component</h1>
+  </header>
 
+  <main>
+
+  </main>
+
+  <footer>
+
+  </footer>
 </body>
 </html>
