--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
   </header>
 
   <main>
+    <div>
 
+    </div>
   </main>
 
   <footer>
-
+    <h2>Made by Luis Roldán</h2>
   </footer>
 </body>
 </html>
