--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
   </header>
 
   <main>
-    <div>
-
-    </div>
+    <section>
+      <div>
+        <img src="./assets /image-product-desktop.jpg" alt="img-desktop">
+      </div>
+      <div></div>
+    </section>
   </main>
 
   <footer>
