--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       <div>
         <img src="./assets /image-product-desktop.jpg" alt="img-desktop">
       </div>
-      <div></div>
+      <div>
+        <p><strong>PERFUME</strong></p>
+        <h2>Gabrielle Essence Eau De Parfum</h2>
+      </div>
     </section>
   </main>
 
