--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div>
         <p><strong>PERFUME</strong></p>
         <h2>Gabrielle Essence Eau De Parfum</h2>
+        <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator fot the House of CHANEL</p>
       </div>
     </section>
   </main>
