--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         <p><strong>PERFUME</strong></p>
         <h2>Gabrielle Essence Eau De Parfum</h2>
         <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator fot the House of CHANEL</p>
+        <div>
+          <h2>$149.99</h2>
+          <p>$169.99</p>
+        </div>
+        <button>
+          <img src="./assets /icon-cart.svg" alt="icon">
+          Add to Cart
+        </button>
       </div>
     </section>
   </main>
