--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   </header>
 
   <main>
-    <section>
+    <section class="main">
       <div>
-        <img src="./assets /image-product-desktop.jpg" alt="img-desktop">
+        <img src="./assets /image-product-desktop.jpg" alt="img-desktop" class="img-desktop">
       </div>
       <div>
         <p><strong>PERFUME</strong></p>
