--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
   <main>
     <section class="main">
-      <div>
+      <div class="left-side">
         <img src="./assets /image-product-desktop.jpg" alt="img-desktop" class="img-desktop">
       </div>
-      <div>
+      <div class="right-side">
         <p><strong>PERFUME</strong></p>
         <h2>Gabrielle Essence Eau De Parfum</h2>
         <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator fot the House of CHANEL</p>
