--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="right-side">
         <p><strong>PERFUME</strong></p>
-        <h2>Gabrielle Essence Eau De Parfum</h2>
+        <h2 class="title">Gabrielle Essence Eau De Parfum</h2>
         <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator fot the House of CHANEL</p>
         <div>
           <h2>$149.99</h2>
