--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2 class="title">Gabrielle Essence Eau De Parfum</h2>
         <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator fot the House of CHANEL</p>
         <div>
-          <h2>$149.99</h2>
+          <h2 class="title">$149.99</h2>
           <p>$169.99</p>
         </div>
         <button>
