--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- <img src="./assets /image-product-desktop.jpg" alt="img-desktop" class="img-desktop"> -->
       </div>
       <div class="right-side">
-        <p><strong>PERFUME</strong></p>
+        <p><strong class="perfume">PERFUME</strong></p>
         <h2 class="title">Gabrielle Essence Eau De Parfum</h2>
         <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator fot the House of CHANEL</p>
         <div>
