--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="right-side">
         <p><strong class="perfume">PERFUME</strong></p>
         <h2 class="title">Gabrielle Essence Eau De Parfum</h2>
-        <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator fot the House of CHANEL</p>
+        <p class="text">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator fot the House of CHANEL</p>
         <div>
           <h2 class="title-green">$149.99</h2>
           <p>$169.99</p>
