--- a/index.html
+++ b/index.html
@@ -21,17 +21,20 @@
         <!-- <img src="./assets /image-product-desktop.jpg" alt="img-desktop" class="img-desktop"> -->
       </div>
       <div class="right-side">
-        <p><strong class="perfume">PERFUME</strong></p>
-        <h2 class="title">Gabrielle Essence Eau De Parfum</h2>
-        <p class="text">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator fot the House of CHANEL</p>
-        <div>
-          <h2 class="title-green">$149.99</h2>
-          <p>$169.99</p>
+        <div class="container">
+
+          <p><strong class="perfume">PERFUME</strong></p>
+          <h2 class="title">Gabrielle Essence Eau De Parfum</h2>
+          <p class="text">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator fot the House of CHANEL</p>
+          <div>
+            <h2 class="title-green">$149.99</h2>
+            <p>$169.99</p>
+          </div>
+          <button>
+            <img src="./assets /icon-cart.svg" alt="icon">
+            Add to Cart
+          </button>
         </div>
-        <button>
-          <img src="./assets /icon-cart.svg" alt="icon">
-          Add to Cart
-        </button>
       </div>
     </section>
   </main>
