--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <p class="text">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator fot the House of CHANEL</p>
           <div>
             <h2 class="title-green">$149.99</h2>
-            <p>$169.99</p>
+            <p class="old-price">$169.99</p>
           </div>
           <button>
             <img src="./assets /icon-cart.svg" alt="icon">
