--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h2 class="title-green">$149.99</h2>
             <p class="old-price">$169.99</p>
           </div>
-          <button>
+          <button class="btn">
             <img src="./assets /icon-cart.svg" alt="icon">
             Add to Cart
           </button>
