--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
           <p><strong class="perfume">PERFUME</strong></p>
           <h2 class="title">Gabrielle Essence Eau De Parfum</h2>
-          <p class="text">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator fot the House of CHANEL</p>
+          <p class="text">A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator fot the House of CHANEL.</p>
           <div class="prices">
             <h2 class="title-green">$149.99</h2>
             <p class="old-price">$169.99</p>
